commit for new changes made

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,18 @@
         <title>Okoro Na Me</title>
     </head>
     <body>
+        <STYLE>
+            table, th, td{
+                border: 1px solid black;
+              
+            }
+            .heading{
+                color:red
+                }
+                #plan{
+                    color:darkgreen
+                }
+        </STYLE>
         <h1> My First Heading</h1>
         <p>My first paragraph</p>
         <a href="https://facebook.com">Visit Facebook</a>
@@ -26,9 +38,67 @@
         <abbr title="you are welcome"> Wecome to Wembly</abbr>
         <address>welcome to wembly</address>
         <cite>welcome to wembly</cite>
+        <a href="https://facebook.com" target="_blank">My Site</a>
+        <table>
+            <tr>
+                <th>S/N</th>
+                <th>FirstName</th>
+                <th>LastName</th>
+            </tr>
+            <tr>
+                <td> 1 </td>
+                <td> JOHNBULL</td>
+                <td>JAMES</td>
+            </tr>
+            <tr>
+                <td> 2 </td>
+                <td> Obuke</td>
+                <td>Agatha</td>
+            </tr>
+            <tr>
+                <td> 3 </td>
+                <td> Eguba</td>
+                <td>Okpa</td>
+            </tr>
+        </table>
+            <br>
+            <li> Delta</li> <br>
+            <li> Asaba</li> <br>
+            <li> Asaba</li> <br>
 
 
+            <ol> Delta</ol> <br>
+            <ol> Asaba</ol> <br>
+            <ol> Asaba</ol> <br>
 
+            <button>First Button</button>
+            <button>Second Button</button>
+            <h2 class="heading">London</h2>
+            <h2 class="heading">United Kingdom</h2>
+            <h3 id="plan">We Move</h3>
+            <!--
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9oHUYu4Itt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            -->
+            <audio controls>
+                <source src="RudeBoy-Audio-Money-Prod.-LordSky.mp3" type="audio/ogg">
+            </audio>
+            <!--
+            <video width="320" height="240" controls>
+                <source src="https://www.youtube.com/watch?v=_yrMB-Pzzp8" type="video/mp4")
+            </video>
+            -->
+            <br>
+            <br>
+            <br>
+            <br>
+            <form action="">
+                <label for="fname">First Name:</label><br>
+                <input type="text" id="fname"><br>
+                <label for="lname">Last Name:</label><br>
+                <input type="text" id="lname"><br><br>
+                <input type="submit" value="Submit"
+
+            </form>
 
 
 
